--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <header>
-      <h1>Importing 3d files</h1>
+      <h1>Moving Velociraptor</h1>
     </header>
-
+    
     <main>
       <div id="container3D"></div>
     </main>
